fix grid sizing issue that caused pixel overflow

--- a/style.css
+++ b/style.css
@@ -59,8 +59,8 @@ h1 {
     flex-wrap: wrap;
     padding: 0;
     margin: 0;
-    width: 640px;
-    height: 640px;
+    width: 641px;
+    height: 641px;
     background-color: #ADD2C9;
 }
 
